# cbfpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pr-check.yml
cbfpy/: __init__.py  cbf.py  cbf_controller.py  cbf_qp_solver.py
docs/source/: cbfpy.rst  conf.py  examples.rst  index.rst  theory.rst
examples/: example_circle_cbf.py  example_lidar_cbf.py  example_multi_agent_cbf.py  example_path_following_cbf.py  example_pnorm2d_cbf.py  example_scalar_cbf.py  example_scalar_range_cbf.py  example_unicycle_circle_cbf.py  example_unicycle_pnorm2d_cbf.py
tests/: test_cbf.py  test_cbf_controller.py  test_cbf_qp_solver.py
