[project]
name = "cbfpy"
version = "0.1.0"
description = "Python package for using simple control barrier function"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Toshiyuki Oshima", email = "toshiyuki67026@gmail.com" }]
dependencies = [
    "sympy>=1.12",
    "quadprog>=0.1.12",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cbfpy"]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "mypy>=1.14",
    "sphinx>=7.4",
    "sphinx-rtd-theme>=3.0",
    "sphinx-pyproject>=0.3",
    "pre-commit>=4.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["cbfpy"]

[tool.mypy]
python_version = "3.10"
plugins = "numpy.typing.mypy_plugin"
strict = true
ignore_missing_imports = true
disallow_any_generics = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cbfpy --cov-branch --cov-report=xml --cov-report=html:cov_html"

[tool.sphinx-pyproject]
project = "cbfpy"
copyright = "2022, Toshiyuki Oshima"
language = "en"
package_root = "cbfpy"
html_theme = "sphinx_rtd_theme"
todo_include_todos = true
templates_path = ["_templates"]
html_static_path = ["_static"]
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.viewcode",
    "sphinx.ext.todo",
    "sphinx.ext.napoleon",
]
